Revision history for HarfBuzz::Shaper.

0.021

    - Simplify XS by using typemaps.

0.020 2020-02-07

    - Solve some memory corruption on Windows.
    - Remove liberation test font.

0.019 2020-02-06 16:31

    - Implement shaping features. See e.g. t/30_kern.t.
    - Remove t/99_showlog.t (doesn't show info)
    - Small build fixes.

0.018.4 Sun Feb  2 09:55

    - Small build fixes.

0.018.3 Fri Jan 31 15:40

    - Small build fixes.
    - add t/99_showlog.t to get more detailed build/test information.

0.018.2 Fri Jan 31 09:39

    - Small build fixes.
    - Move harfbuzz sources to a separate directory to avoid inclusion
      of the wrong include files when using platform library.
    
0.018.1 Thu Jan 31 00:00

    - Small build fixes.
    
0.018 Thu Jan 30 09:55

    - Add harfbuzz source so we can build the lib ourselves if needed.
    - Upgrade to upstream harfbuzz 2.6.4.

0.017 Wed Jan 29 21:00

    - Add INSTALL document.

0.016 Mon Jan 27 08:47:55

    - Raise requirement for the harfbuzz library to version 1.7.7.

0.015 Sun Jan 26 22:22:22

    - Modify include paths to work on more systems.
    - Now also builds with Strawberry Perl 5.30 on Windows.

0.014 Sun Jan 26 21:37:34

    - Compare metrics with some fuzz to cope with differences between
      harfbuzz versions.
    - Add hb_version_string() method.

0.013 Sun Jan 26 19:38:03 2020

    - Fix build on FreeBSD.

0.012 Sun Jan 26 12:25:06 2020

    - Fix build on FreeBSD.

0.011 Sat Jan 25 21:11:34 2020

    - First CPAN release.

0.01  Wed Jan 22 21:11:34 2020

    - Initial version.
