@@ -2,7 +2,9 @@ Revision history for HarfBuzz::Shaper.
 
 0.021
 
+    - Add set/get_language.
     - Simplify XS by using typemaps.
+    - Try fix some build problems on FreeBSD 10.
 
 0.020 2020-02-07
 
